cluster/istio/networking/ingress/virtual-services/authelia-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: authelia-virtualservice
spec:
  hosts:
  - sso.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: authelia.authelia.svc.cluster.local
        port:
          number: 80
