cluster/istio/networking/ingress/virtual-services/dawarich-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dawarich-virtualservice
spec:
  hosts:
  - dawarich.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: dawarich.dawarich.svc.cluster.local
        port:
          number: 3000
          name: dawarich
          protocol: HTTP
