cluster/istio/networking/ingress/virtual-services/forgejo-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: forgejo-virtualservice
spec:
  hosts:
  - code.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: forgejo-http.forgejo.svc.cluster.local
        port:
          number: 3000
