cluster/istio/networking/ingress/virtual-services/gatus-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gatus-virtualservice
spec:
  hosts:
  - gatus.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: gatus.gatus.svc.cluster.local
        port:
          number: 80
