cluster/istio/networking/ingress/virtual-services/glance-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: glance-virtualservice
spec:
  hosts:
  - glance.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: glance.glance.svc.cluster.local
        port:
          number: 8080
