cluster/istio/networking/ingress/virtual-services/jellyfin-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jellyfin-virtualservice
spec:
  hosts:
  - jellyfin.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: jellyfin.jellyfin.svc.cluster.local
        port:
          number: 8096
          name: jellyfin
