cluster/istio/networking/ingress/virtual-services/keycloak-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-virtualservice
spec:
  hosts:
  - sso.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: keycloak.keycloak.svc.cluster.local
        port:
          number: 8080
      headers:
        request:
          set:
            X-Forwarded-Proto: https
