cluster/istio/networking/ingress/virtual-services/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-virtualservice
spec:
  hosts:
  - kiali.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
          name: kiali
