cluster/istio/networking/ingress/virtual-services/mealie-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mealie-virtualservice
spec:
  hosts:
  - mealie.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: mealie.mealie.svc.cluster.local
        port:
          number: 9925
