cluster/istio/networking/ingress/virtual-services/tandoor-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tandoor-virtualservice
spec:
  hosts:
  - tandoor.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: tandoor.tandoor.svc.cluster.local
        port:
          number: 80
      headers:
        request:
          set:
            X-Forwarded-Proto: https
