cluster/istio/networking/ingress/virtual-services/vault-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vault-virtualservice
spec:
  hosts:
  - vault.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
          name: vault
