cluster/istio/networking/ingress/virtual-services/wikijs-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: wikijs-virtualservice
spec:
  hosts:
  - wikijs.cluster.netbird.selfhosted
  gateways:
  - ingress-cluster-gateway
  http:
  - route:
    - destination:
        host: wikijs.wikijs.svc.cluster.local
        port:
          number: 80
          name: wikijs
